# supertone-mcp

./: .mcp.json  CHANGELOG.md  PRD.md  README.md  STATUS.md  glama.json  issues.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  data_model.md  registry-submissions.md  requirements.md  review_lessons.md  review_notes.md  sprint_state.md  test_plan.md  ux_spec.md
docs/specs/: SPEC-029.md
src/supertone_mcp/: __init__.py  __main__.py  audio_ops.py  constants.py  exceptions.py  models.py  server.py  supertone_client.py  tools.py
src/supertone_tts_mcp/: constants.py  models.py  server.py  supertone_client.py  tools.py
tests/: test_audio_ops.py  test_audio_ops_real_ffmpeg.py  test_constants_sync.py  test_models.py  test_server.py  test_supertone_client.py  test_tools.py  test_version.py
