[project]
name = "supertone-mcp"
version = "0.2.0"
description = "MCP server for the Supertone TTS API — a composable toolkit of voice synthesis, discovery, cloning, and usage tools across 31 languages"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "pillip" },
]
keywords = ["mcp", "tts", "supertone", "text-to-speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "imageio-ffmpeg>=0.5,<1.0",
    "mcp>=1.0,<2.0",
    "mutagen>=1.47",
    "supertone>=0.2.3,<0.3",
]

[project.scripts]
supertone-mcp = "supertone_mcp.server:main"

[project.urls]
Homepage = "https://github.com/supertone-inc/supertone-mcp"
Repository = "https://github.com/supertone-inc/supertone-mcp"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supertone_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
